Some minor tweaks following #55 - restore AAA accessibility and fix chevron alignment

--- a/public/template/src/scss/components/_nav.scss
+++ b/public/template/src/scss/components/_nav.scss
@@ -27,7 +27,9 @@
         }
 
         &--activepage {
-
+            > .c-nav__chevron {
+                top: 0.35rem;
+            }
             > a {
                 position: relative;
                 color: map-get($colors, sapphire);
